# stepit

./: README.md
include/stepit/: logging.h  publisher.h  utils.h
plugin/field_base/: CMakeLists.txt  README.md
plugin/field_base/include/stepit/field/: data_loader.h  field.h  operator.h
plugin/field_base/src/: data_loader.cpp  operator.cpp
plugin/policy_neuro/include/stepit/policy_neuro/: action_source.h  field_ops.h  module.h  neuro_policy.h
plugin/policy_neuro/src/: action_source.cpp  field_ops.cpp  heightmap_source.cpp  module.cpp  neuro_module.cpp  neuro_policy.cpp
plugin/policy_neuro/template/: field_ops.yml
plugin/policy_neuro_motion_tracking/: CMakeLists.txt  README.md
plugin/policy_neuro_motion_tracking/include/stepit/policy_neuro/: forward_kinematics.h  geometry_operator.h  motion_player.h  motion_trajectory.h  relative_pose_source.h
plugin/policy_neuro_motion_tracking/src/: forward_kinematics.cpp  geometry_operator.cpp  motion_player.cpp  motion_trajectory.cpp  relative_pose_source.cpp
plugin/policy_neuro_motion_tracking/template/: forward_kinematics.yml  motion_alignment.yml  motion_player.yml  motion_trajectory.yml  relative_pose.yml
plugin/policy_neuro_redis/: CMakeLists.txt  README.md
plugin/policy_neuro_redis/include/stepit/policy_neuro_redis/: field_subscriber_redis.h  redis_client.h
plugin/policy_neuro_redis/src/: field_subscriber_redis.cpp  redis_client.cpp
plugin/policy_neuro_redis/template/: redis_field_subscriber.yml
plugin/policy_neuro_ros/src/: cmd_vel_subscriber.cpp
plugin/policy_neuro_ros2/: README.md
plugin/policy_neuro_ros2/include/stepit/policy_neuro_ros2/: cmd_vel_subscriber2.h
plugin/policy_neuro_ros2/src/: cmd_vel_subscriber2.cpp  field_subscriber2.cpp  heightmap_subscriber2.cpp
plugin/pyutils/: CMakeLists.txt  README.md
plugin/pyutils/app/: npz_info.cpp
plugin/pyutils/include/stepit/pyutils/: npz_reader.h
plugin/pyutils/src/: npz_reader.cpp
plugin/ros2_base/src/: publisher.cpp
plugin/ros_base/src/: publisher.cpp
scripts/: build.sh
src/stepit/: agent.cpp  publisher.cpp  utils.cpp
